@@ -22,6 +22,9 @@
 ##
 ## Accuracy: The result is a tight enclosure.
 ##
+## @comment DO NOT SYNCHRONIZE DOCUMENTATION STRING
+## No one way of decorating this operations gives useful information in all
+## contexts.  Therefore, the result will carry a @code{trv} decoration at best.
 ## @end deftypefn
 
 ## Author: Oliver Heimlich
