@@ -4,6 +4,9 @@
  * mulrev: Now allows non-scalar arguments and can compute two-output division
            (mulrevtopair no longer available)
 
+ * All reverse operations: Now return a trivial decoration information at best,
+                           in conformance with IEEE 1788
+
 Bugfixes
  * Compatibility with GNU Octave 4.0 (bug #43925)
  * Build problems with environment variables CCFLAGS, LDFLAGS
